--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,7 @@ rvm:
   - 2.0.0
   - 2.1.1
 
-install:
-  - "travis_retry bundle install"
+script: bundle exec rspec spec
 
 gemfile:
   - gemfiles/3.2.gemfile
