Add code climate

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,9 @@ rvm:
 
 script: bundle exec rspec spec
 
+env:
+  CODECLIMATE_REPO_TOKEN: 47bc411a11ccfed015bf25395d8204600c899e530c1c4beed1b7197aa61c6fb6
+
 gemfile:
   - gemfiles/3.2.gemfile
   - gemfiles/4.0.gemfile
