Add different db adapters for tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,16 @@ rvm:
 
 script: bundle exec rake spec
 
+before_script:
+  - cp spec/fake_app/config/database.yml.example spec/fake_app/config/database.yml
+  - mysql -e 'create database mg_test'
+  - psql -c 'create database mg_test' -U postgres
+
+env:
+  - DB=sqlite
+  - DB=mysql
+  - DB=postgresql
+
 gemfile:
   - gemfiles/rails_32.gemfile
   - gemfiles/rails_40.gemfile
@@ -14,3 +24,4 @@ gemfile:
 addons:
   code_climate:
     repo_token: 47bc411a11ccfed015bf25395d8204600c899e530c1c4beed1b7197aa61c6fb6
+  postgresql: "9.3"
