--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ rvm:
   - 2.0.0
   - 2.1.1
 
-script: bundle exec rake spec
+script: bundle exec rake spec cucumber
 
 before_script:
   - cp spec/fake_app/config/database.yml.example spec/fake_app/config/database.yml
