--- a/.gitignore
+++ b/.gitignore
@@ -17,4 +17,10 @@ test/tmp
 test/version_tmp
 tmp
 log
-spec/fake_app/config/*.yml
+database.yml
+
+spec/dummy/db/*.sqlite3
+spec/dummy/db/*.sqlite3-journal
+spec/dummy/log/*.log
+spec/dummy/tmp/
+spec/dummy/.sass-cache
