--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,12 @@ rvm:
   - 2.1.1
   - ruby-head
 
-script: bundle exec rake spec cucumber
+script:
+  - bundle exec rake db:migrate
+  - bundle exec rake spec cucumber
 
 before_script:
-  - cp spec/fake_app/config/database.yml.example spec/fake_app/config/database.yml
+  - cp spec/dummy/config/database.yml.travis spec/dummy/config/database.yml
   - mysql -e 'create database mg_test'
   - psql -c 'create database mg_test' -U postgres
 
