--- a/.travis.yml
+++ b/.travis.yml
@@ -19,9 +19,9 @@ env:
   - DB=postgresql
 
 gemfile:
-  - gemfiles/rails_32.gemfile
   - gemfiles/rails_40.gemfile
   - gemfiles/rails_41.gemfile
+  - gemfiles/rails_42.gemfile
 
 addons:
   code_climate:
@@ -30,4 +30,5 @@ addons:
 
 matrix:
   allow_failures:
+    - rvm: 2.0.0
     - rvm: ruby-head
